--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h2>세계의 야동</h2>
   <p><a href="https://www.xvideos.com" target="_blank" title="sex">야동 보러가기</a>
 
-  <br><img src="성재기.jpg" width="30%">
+  <br><img src="jaegi.jpg" width="30%">
 
 </body>
 </html>
