--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
   <h2>세계의 야동들</h2>
   <p><a href="https://www.xvideos.com/?k=europe" target="_blank" title="sex">유럽야동 보러가기</a>
 
-  <br><img src="서양.jpg" width="30%">
+  <br><img src="1sex.jpg" width="30%">
 
 </body>
 </html>
