--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
   <h2>동양 야동</h2>
   <p><a href="https://www.xvideos.com/?k=korea" target="_blank" title="sex">동양야동 보러가기</a>
 
-  <br><img src="동양.jpg" width="30%">
+  <br><img src="2sex.jpg" width="30%">
 
 </body>
 </html>
