--- a/3.html
+++ b/3.html
@@ -14,7 +14,7 @@
   <h2>북미,남미 야동</h2>
   <p><a href="https://www.xvideos.com/?k=usa" target="_blank" title="sex">북미,남미 야동 보러가기</a>
 
-  <br><img src="미국.jpg" width="30%">
+  <br><img src="3sex.jpg" width="30%">
 
 </body>
 </html>
